--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,6 @@
   --color-yellow: #C59F2B;
   --color-orange: #D34E25;
   --color-black: #130F09;
-  --color-gray: #55524E;
+  --color-gray: #504638;
   --color-white: #D0CFB7;
 }
